# electromagnetism

./: .gitignore  CMakeLists.txt
include/: Particle.h  ParticleEngine.h  PhysicsVector.h  Quadrant.h
src/: Particle.cpp  ParticleEngine.cpp  PhysicsVector.cpp  main.cpp
